Segurança: Remover credenciais do código + Validações + Tratamento de erros
 Segurança CRÍTICA:
- Removida senha do config.py
- Credenciais movidas para .env e config.local.js (não commitados)
- Atualizado .gitignore para proteger arquivos sensíveis
- Criado sistema de configuração seguro

 Validações Implementadas:
- Validação de valores (positivos, limite máximo)
- Validação de descrição (tamanho mínimo/máximo)
- Validação de datas (limite de 10 anos)
- Validação de parcelas (1 a 360)

 Tratamento de Erros:
- Função tratarErro() centralizada
- Mensagens de erro específicas por tipo
- Logs detalhados no console
- Feedback claro ao usuário

 Documentação:
- Criado SEGURANCA.md com guia completo
- Atualizado README.md com instruções
- Criados arquivos .example para facilitar setup

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ env/
 ENV/
 .venv
 
+# Variáveis de ambiente e configurações sensíveis
+.env
+.env.local
+.env.*.local
+config_local.py
+
 # Banco de dados
 *.db
 *.sqlite
@@ -48,6 +54,10 @@ desktop.ini
 
 # Arquivos temporários
 *.tmp
+
+# Configurações locais (contém credenciais)
+static/js/config.local.js
+config_local.py
 *.bak
 *.cache
 
