--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==3.0.0
+﻿Flask==3.0.0
 Flask-Bcrypt==1.0.1
 bcrypt==4.1.1
 reportlab==4.0.7
@@ -9,3 +9,4 @@ httpcore==1.0.9
 websockets==15.0.1
 python-dateutil==2.9.0.post0
 gunicorn==21.2.0
+python-dotenv==1.0.0
