Migra para PostgreSQL local e ajusta conexão no app

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 # Arquivo de exemplo para variáveis de ambiente
 # Copie este arquivo para .env e preencha com suas credenciais
 
-# Credenciais do Supabase
-# Obtenha em: https://supabase.com/dashboard/project/_/settings/api
-SUPABASE_URL=sua_url_do_supabase_aqui
-SUPABASE_KEY=sua_chave_anon_aqui
+# Configurações do PostgreSQL Local
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=financas_em_dia
+DB_USER=postgres
+DB_PASSWORD=sua_senha_do_postgres_aqui
 
-# Chave secreta do Flask (gere uma aleatória)
-SECRET_KEY=sua_chave_secreta_aqui
+# Chave secreta do Flask (gere uma aleatória em produção)
+SECRET_KEY=financas_em_dia_2025_seguro_web_app
+
