--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,7 @@ Flask-Bcrypt==1.0.1
 bcrypt==4.1.1
 reportlab==4.0.7
 Werkzeug==3.0.1
-supabase==2.24.0
-httpx==0.28.1
-httpcore==1.0.9
-websockets==15.0.1
+psycopg2-binary==2.9.11
 python-dateutil==2.9.0.post0
 gunicorn==21.2.0
 python-dotenv==1.0.0
